[workspace]
members = [".", "demo"]

[package]
name = "blake-db"
version = "0.1.0"
authors = ["David Craven <david@craven.ch>"]
edition = "2018"

[dependencies]
anyhow = "1.0.41"
async-channel = "1.6.1"
automerge = { git = "https://github.com/automerge/automerge-rs" }
automerge-protocol = { git = "https://github.com/automerge/automerge-rs" }
blake-streams = "0.1.0"
blake-streams-core = { features = ["serde-derive"], version = "0.1.1" }
byteorder = "1.4.3"
fnv = "1.0.7"
futures = "0.3.15"
ipfs-embed = "0.22.3"
serde = "1.0.126"
serde_cbor = "0.11.1"
sled = "0.34.6"
tracing = "0.1.26"
unicycle = "0.7.1"
zerocopy = "0.5.0"

[dev-dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
serde_json = "1.0.64"
tempdir = "0.3.7"
tracing-subscriber = "0.2.19"

[patch.crates-io]
blake-streams = { git = "https://github.com/ipfs-rust/blake-streams" }
blake-streams-core = { git = "https://github.com/ipfs-rust/blake-streams" }
libp2p-blake-streams = { git = "https://github.com/ipfs-rust/blake-streams" }
sled = { git = "https://github.com/spacejam/sled" }
