[package]
name = "blake-db-demo"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
anyhow = "1.0.41"
async-channel = "1.6.1"
async-std = { version = "1.9.0", features = ["attributes"] }
blake-db = { path = ".." }
futures = "0.3.15"
iced = { version = "0.3", features = ["async-std", "debug"] }
iced_futures = "0.3.0"
parking_lot = "0.11.1"
serde_json = "1.0.64"
tracing = "0.1.26"
